# selkit

./: .buildinfo  .gitignore  CHANGELOG.md  Makefile  README.md  RELEASE.md  genindex.html  index.html  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py
.github/workflows/: ci.yml  release.yml
_sources/: index.rst.txt
_sources/about/: index.rst.txt
_sources/api/: index.rst.txt
_sources/change_log/: index.rst.txt
_sources/faq/: index.rst.txt
_sources/other_software/: index.rst.txt
_sources/tutorials/: 02_detecting_positive_selection.rst.txt  05_branch_site_test.rst.txt
_sources/usage/: index.rst.txt
_sources/validation/: index.rst.txt
_static/: custom.css
about/: index.html
api/: index.html
change_log/: index.html
docs/: Makefile  conf.py  index.rst
docs/change_log/: index.rst
docs/faq/: index.rst
docs/superpowers/plans/: 2026-04-18-selkit-foundation-and-site-models.md
docs/superpowers/specs/: 2026-04-18-selkit-design.md
docs/tutorials/: 01_first_run.rst  02_detecting_positive_selection.rst  03_beta_models_boundary_test.rst  04_library_workflow.rst  06_branch_test.rst  index.rst
docs/usage/: index.rst
faq/: index.html
other_software/: index.html
scripts/: check_version_sync.py  generate_docs_figures.py
selkit/: __init__.py  __main__.py  cli.py  cli_registry.py  errors.py
selkit/engine/: beb.py  codon_model.py  fit.py  genetic_code.py  likelihood.py  optimize.py  rate_matrix.py
selkit/engine/beb/: __init__.py  _grid.py  branch_site.py  site.py
selkit/io/: alignment.py  config.py  results.py  tree.py
selkit/progress/: runner.py
selkit/services/: validate.py
selkit/services/codeml/: _orchestrator.py  (+4 more)
tests/integration/: conftest.py  test_beb_flag.py  test_branch_cli.py  test_branch_site_cli.py  test_paml_lnl_match.py  test_reproducibility.py  test_rerun_branch.py  test_rerun_v02_rejection.py  test_site_cli.py  test_site_models_cli.py  test_validate_cli.py
tests/unit/: test_alignment.py  test_beb.py  test_beb_branch_site.py  test_beb_grid.py  test_beb_site.py  test_branch_models.py  test_branch_models_service.py  test_branch_site_service.py  test_cli_registry.py  test_cli_rendering.py  test_codon_model.py  test_config.py  test_errors.py  test_fit_branch_models.py  test_fit_m0.py  test_fit_se.py  test_genetic_code.py  test_library_api.py  test_likelihood.py  test_lrt.py  test_lrt_registry.py  test_optimize.py  test_orchestrator.py  test_progress.py  test_rate_matrix.py  test_results.py  test_results_schema.py  test_site_models_service.py  test_tree.py  test_validate_service.py
tests/validation/: README.md  conftest.py  test_beb_m8_paml_match.py  test_beb_modela_paml_match.py  test_paml_corpus.py
tutorials/: 01_first_run.html  02_detecting_positive_selection.html  03_beta_models_boundary_test.html  04_library_workflow.html  05_branch_site_test.html  06_branch_test.html  index.html
usage/: index.html
validation/: index.html
(+23 files in other folders)
