[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "selkit"
version = "0.1.0"
description = "Python reimplementation of PAML's selection-analysis workflows (codeml, yn00)"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Jacob L. Steenwyk", email = "jlsteenwyk@gmail.com" }]
requires-python = ">=3.11"
classifiers = [
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
    "rich>=13.7",
    "PyYAML>=6.0",
]

[project.urls]
Homepage = "https://github.com/JLSteenwyk/selkit"
Repository = "https://github.com/JLSteenwyk/selkit"
Issues = "https://github.com/JLSteenwyk/selkit/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "mypy>=1.8",
    "ruff>=0.3",
]

[project.scripts]
selkit = "selkit.__main__:main"

[tool.setuptools.packages.find]
include = ["selkit*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "validation: PAML-comparison corpus tests (nightly)",
    "simulation: simulation-based tests (tagged releases only)",
]
