[build-system]
requires = ["setuptools>=65.0", "wheel>=0.30.0"]
build-backend = "setuptools.build_meta"

# Package metadata, dependencies, entry points, and classifiers live in setup.py.

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "validation: PAML-comparison corpus tests (nightly)",
    "simulation: simulation-based tests (tagged releases only)",
]
